--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Execute ripgrep on VSCode.",
     "version": "0.0.1",
     "repository": {
-		"type": "git",
-		"url": "https://github.com/muraak/vscode-rg"
-	},
+        "type": "git",
+        "url": "https://github.com/muraak/vscode-rg"
+    },
     "publisher": "muraak",
     "engines": {
         "vscode": "^1.26.0"
@@ -30,7 +30,18 @@
                 "command": "rg.simpleSearch",
                 "title": "Rg Simple Search"
             }
-        ]
+        ],
+        "configuration":{
+            "type": "object",
+            "title": "ripgrep on vscode configuration",
+            "properties": {
+                "rg.encoding":{
+                    "scope": "resource",
+                    "type": "string",
+                    "default": "utf-8"
+                }
+            }
+        }
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
@@ -45,5 +56,8 @@
         "tslint": "^5.8.0",
         "@types/node": "^7.0.43",
         "@types/mocha": "^2.2.42"
+    },
+    "dependencies": {
+        "iconv-lite": "^0.4.24"
     }
 }
