--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-rg",
     "displayName": "ripgrep on VS Code",
     "description": "Execute ripgrep on VSCode.",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "repository": {
         "type": "git",
         "url": "https://github.com/muraak/vscode-rg"
@@ -51,13 +51,14 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
+        "@types/mocha": "^2.2.42",
+        "@types/node": "^7.0.70",
         "tslint": "^5.8.0",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6"
     },
     "dependencies": {
-        "iconv-lite": "^0.4.24"
+        "iconv-lite": "^0.4.24",
+        "vscode-uri": "^1.0.6"
     }
 }
