--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "activationEvents": [
         "onCommand:samples.quickInput",
         "onCommand:rg.test",
-        "onCommand:rg.simpleSearch"
+        "onCommand:rg.simpleSearch",
+        "*"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -58,7 +59,9 @@
         "vscode": "^1.1.6"
     },
     "dependencies": {
+        "date-utils": "^1.2.21",
         "iconv-lite": "^0.4.24",
+        "moment": "^2.22.2",
         "vscode-uri": "^1.0.6"
     }
 }
