enable to rename leaf node

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
                 },
                 {
                     "command": "searchResult.renameNode",
-                    "when": "view == searchResult && viewItem == root"
+                    "when": "view == searchResult && viewItem != file"
                 }
             ]
         },
